--- a/src/public/palette.html
+++ b/src/public/palette.html
@@ -16,7 +16,7 @@
 	<!-- For Android 3.x+ devices: -->
 	<link rel="icon" sizes="196x196" href="assets/icons/apple-touch-icon.png">
 
-    <title>ZotPlan</title>
+    <title>ZotPlan Palette</title>
 
     <link rel="stylesheet" href="assets/style/style.css" />
     <link rel="stylesheet" href="assets/style/variables.css" />
@@ -28,17 +28,6 @@
             "prototype": "ui/loader.reel",
             "properties": {
                 "element": {"#": "owner"}
-            }
-        },
-
-        "zotPlanController": {
-            "prototype": "core/zotplan-controller"
-        },
-
-        "application": {
-            "prototype": "montage/core/application",
-            "properties": {
-                "delegate": {"@": "zotPlanController"}
             }
         }
     }
