Add css variables

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -19,6 +19,7 @@
     <title>ZotPlan</title>
 
     <link rel="stylesheet" href="assets/style/style.css" />
+    <link rel="stylesheet" href="assets/style/variables.css" />
 
     <script src="node_modules/montage/montage.js" async></script>
     <script type="text/montage-serialization">
