Add zotplan auth UI

--- a/public/ui/onboarding.reel/onboarding.html
+++ b/public/ui/onboarding.reel/onboarding.html
@@ -9,6 +9,10 @@
             "properties": {
                 "element": {"#": "owner"}
             },
+            "bindings": {
+                "username": {"<->": "@usernameInput.value"},
+                "password": {"<->": "@passwordInput.value"}
+            },
             "listeners": [
                 {
                     "type": "action",
