--- a/public/ui/base/image.reel/image.html
+++ b/public/ui/base/image.reel/image.html
@@ -2,22 +2,19 @@
 <html>
 <head>
     <title></title>
-    <link rel="stylesheet" type="text/css" href="menu.css">
+    <link rel="stylesheet" type="text/css" href="image.css">
     <script type="text/montage-serialization">
     {
         "owner": {
             "properties": {
                 "element": {"#": "owner"}
-            },
-            "bindings": {
-                "classList.has('hidden')": {"<-": "!@owner.isExpanded"}
             }
         }
     }
     </script>
 </head>
 <body>
-    <div data-montage-id="owner" class="Menu">
-    </div>
+    <img data-montage-id="owner" class="Image">
+    </img>
 </body>
 </html>
