--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="google-signin-client-id" content="11956410191-h0f137migio4rpp2jng7k80i2e3v4h60.apps.googleusercontent.com">
 
+    <meta name="theme-color" content="#FED105">
+
 	<!-- For iPad with high-resolution Retina display running iOS ≥ 7: -->
 	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="assets/icons/apple-touch-icon-152x152-precomposed.png">
 	<!-- For iPhone with high-resolution Retina display running iOS ≥ 7: -->
