--- a/public/ui/my-plans.reel/my-plans.html
+++ b/public/ui/my-plans.reel/my-plans.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title></title>
-    <link rel="stylesheet" type="text/css" href="home.css">
+    <link rel="stylesheet" type="text/css" href="my-plans.css">
     <script type="text/montage-serialization">
     {
         "owner": {
@@ -14,8 +14,8 @@
     </script>
 </head>
 <body>
-    <div data-montage-id="owner" class="Home">
-        Home
+    <div data-montage-id="owner" class="MyPlans">
+        My Plans
     </div>
 </body>
 </html>
