--- a/public/ui/navbar.reel/navbar.html
+++ b/public/ui/navbar.reel/navbar.html
@@ -7,14 +7,9 @@
     {
         "owner": {
             "properties": {
-                "element": {"#": "owner"}
-            },
-            "listeners": [
-                {
-                    "type": "action",
-                    "listener": {"@": "owner"}
-                }
-            ]
+                "element": {"#": "owner"},
+                "buttonsController": {"@": "buttonsController"}
+            }
         },
 
         "buttonsController": {
