Fix course list ui

--- a/public/ui/my-plans.reel/plan-view.reel/course-list.reel/course.reel/course.html
+++ b/public/ui/my-plans.reel/plan-view.reel/course-list.reel/course.reel/course.html
@@ -17,7 +17,7 @@
                 "element": {"#": "id"}
             },
             "bindings": {
-                "value": {"<-": "@owner.course.id"}
+                "value": {"<-": "@owner.course"}
             }
         },
 
