--- a/public/ui/my-plans.reel/plan-view.reel/course-list.reel/quarter.reel/quarter.html
+++ b/public/ui/my-plans.reel/plan-view.reel/course-list.reel/quarter.reel/quarter.html
@@ -61,7 +61,7 @@
                 "element": {"#": "courses"}
             },
             "bindings": {
-                "content": {"<-": "@owner.courses"}
+                "content": {"<-": "@owner.courses.filter{defined()}"}
             }
         },
 
