--- a/public/ui/my-plans.reel/plan-view.reel/course-list.reel/course-list.html
+++ b/public/ui/my-plans.reel/plan-view.reel/course-list.reel/course-list.html
@@ -17,7 +17,7 @@
                 "element": {"#": "years"}
             },
             "bindings": {
-                "content": {"<-": "@owner.plan.courses"}
+                "content": {"<-": "@owner.years"}
             }
         },
 
