Convert Plan to embedded model (in User)

--- a/public/ui/my-plans.reel/my-plans.html
+++ b/public/ui/my-plans.reel/my-plans.html
@@ -35,7 +35,7 @@
                 "isSelectionEnabled": true
             },
             "bindings": {
-                "content": {"<-": "@owner.application.config.plans"}
+                "content": {"<-": "@owner.application.config.user.plans"}
             }
         },
 
