--- a/public/ui/my-plans.reel/plan-view.reel/course-list.reel/year.reel/year.html
+++ b/public/ui/my-plans.reel/plan-view.reel/course-list.reel/year.reel/year.html
@@ -67,7 +67,7 @@
             },
             "bindings": {
                 "iteration": {"<-": "@quarters:iteration"},
-                "courses": {"<-": "iteration.object"},
+                "courses": {"<-": "iteration.object.courses"},
                 "quarter": {"<-": "iteration.index"}
             }
         }
