--- a/public/ui/my-plans.reel/plan-view.reel/course-list.reel/year.reel/year.html
+++ b/public/ui/my-plans.reel/plan-view.reel/course-list.reel/year.reel/year.html
@@ -69,7 +69,13 @@
                 "iteration": {"<-": "@quarters:iteration"},
                 "courses": {"<-": "iteration.object.courses"},
                 "quarter": {"<-": "iteration.index"}
-            }
+            },
+            "listeners": [
+                {
+                    "type": "requestAddCourse",
+                    "listener": {"@": "owner"}
+                }
+            ]
         }
     }
     </script>
