--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
         <meta name="google-signin-client-id" content="11956410191-h0f137migio4rpp2jng7k80i2e3v4h60.apps.googleusercontent.com">
         <meta name="theme-color" content="#FED105">
 
+        <link rel="stylesheet" href="style.css">
+
         <title>ZotPlan</title>
     </head>
     <body>
