--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
         <meta name="google-signin-client-id" content="11956410191-h0f137migio4rpp2jng7k80i2e3v4h60.apps.googleusercontent.com">
         <meta name="theme-color" content="#FED105">
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/style.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
         <title>ZotPlan</title>
     </head>
